# libscript

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  dex.ini  dex.yml
benchmarks/: CMakeLists.txt  CMakeLists.txt.in  benchmarks.cpp
cmake/: filesystem-ts.cpp  filesystem.cpp
doc/: _config.yml  index.md  issues.md  roadmap.md
doc/_includes/: enum_in_class
doc/_layouts/: class.md  document.md  namespace.md
doc/classes/: index.md
examples/: CMakeLists.txt  examples.cpp  examples.h  helloworld.cpp  main.cpp  parsing-statements.cpp  polymorphism.script  reading-tokens.cpp  traversing-ast.cpp  units.script
examples/io/: CMakeLists.txt  io.script  main.cpp
examples/units/: CMakeLists.txt  main.cpp  units.script
include/: libscriptdefs.h
include/script/: accessspecifier.h  array.h  arraytemplate.h  ast.h  attributes-map.h  attributes.h  callbacks.h  cast.h  castbuilder.h  class.h  classbuilder.h  classtemplate.h  classtemplateinstancebuilder.h  classtemplatenativebackend.h  classtemplatespecializationbuilder.h  compilemode.h  constructorbuilder.h  context.h  conversions.h  datamember.h  defaultarguments.h  defaultargumentsmap.h  destructorbuilder.h  diagnosticmessage.h  engine.h  enum.h  enumbuilder.h  enumerator.h  enumvalue.h  errorcodes.h  errors.h  exception.h  function-blueprint.h  function-impl.h  function.h  functionbody.h  functionbuilder.h  functioncreator.h  functionflags.h  functiontemplate.h  (+55 more)
include/script/ast/: ast.h  ast_p.h  (+3 more)
src/: accessspecifier.cpp  array.cpp  array_p.h  attributes.cpp  builtinoperators.cpp  builtinoperators.h  cast.cpp  cast_p.h  class.cpp  class_p.h  classbuilder.cpp  classtemplate.cpp  context.cpp  context_p.h  conversions.cpp  defaultarguments.cpp  diagnosticmessage.cpp  engine.cpp  engine_p.h  enum.cpp  enum_p.h  enumbuilder.cpp  enumerator.cpp  enumvalue.cpp  errors.cpp  function-blueprint.cpp  function.cpp  function_p.h  functionbody.cpp  functionbuilder.cpp  functioncreator.cpp  functionflags.cpp  functiontemplate.cpp  functiontemplateprocessor.cpp  initialization.cpp  initializerlist.cpp  lambda.cpp  lambda_p.h  literals.cpp  literals_p.h  (+37 more)
src/ast/: ast.cpp  node.cpp  visitor.cpp
src/compiler/: assignmentcompiler.cpp  commandcompiler.cpp  compiler-errors.cpp  compiler.cpp  compilererrors.cpp  constructorcompiler.cpp  conversionprocessor.cpp  defaultargumentprocessor.cpp  destructorcompiler.cpp  dummytemplatenameprocessor.cpp  expressioncompiler.cpp  functioncompiler.cpp  functionprocessor.cpp  functionscope_p.h  importprocessor.cpp  lambdacompiler.cpp  literalprocessor.cpp  logger.cpp  nameresolver.cpp  scopestatementprocessor.cpp  scriptcompiler.cpp  templatedefinition.cpp  templatenameprocessor.cpp  templatespecialization.cpp  typeresolver.cpp  valueconstructor.cpp  variableaccessor.cpp  variableprocessor.cpp
src/interpreter/: debug-handler.cpp  executioncontext.cpp  interpreter.cpp  workspace.cpp
src/parser/: lexer.cpp  parser-errors.cpp  parser.cpp  parsererrors.cpp  token-reader.cpp  token.cpp
src/program/: expression.cpp  statements.cpp
src/support/: filesystem.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  bar.m  foo.m  kar.m  qux.m  test_arrays.cpp  test_builders.cpp  test_classes.cpp  test_compiler.cpp  test_compiler_errors.cpp  test_conversions.cpp  test_coreutils.cpp  test_eval.cpp  test_initializer_lists.cpp  test_lexer.cpp  test_modules.cpp  test_namelookup.cpp  test_namespaces.cpp  test_overloadresolution.cpp  test_parser.cpp  test_runtime.cpp  test_scenarios.cpp  test_string.cpp  test_symbols.cpp  test_templates.cpp  test_typesystem.cpp
tests/errors/: CMakeLists.txt  main.cpp  test-array-elem-not-convertible.script  test-array-invalid-subscript.script  test-bad-array-init.script  test-base-ctor-missing.script  test-brace-init-narrowing.script  test-copy-ctor-base-missing.script  test-data-member-auto.script  test-delegate-ctor-missing.script  test-deleted-function.script  test-enum-no-init.script  test-function-invalid-default-arg.script  test-function-variable-no-init.script  test-illegal-this.script  test-inheritance-base-ctor-deleted.script  test-inheritance-invalid-base.script  test-init-too-many-args.script  test-invalid-op-overload.script  test-invalid-use-delegated-ctor.script  test-literal-operator-invalid.script  test-member-init-bad-member.script  test-member-init-inherited-member.script  test-member-init-mutli-init.script  test-no-destructor.script  test-object-not-constructible.script  test-private-member-1.script  test-private-member-2.script  test-private-member-3.script  test-private-member-4.script  test-ref-no-init.script  test-return-missing-value.script  test-return-unexpected-value.script  test-static-data-member-no-init.script  test-template-function.script
tests/language/: CMakeLists.txt  access-global.script  builtin-types.script  conversion-function.script  converting-ctor.script  default-arguments.script  enum-assignment.script  for.script  fun-list-init-param.script  functor.script  init-ctor-syntax.script  init-list-syntax.script  initializer-lists.script  lambda.script  list-initialization.script  main.cpp  math.script  namespace-alias.script  polymorphism.script  print.script  simple-functions.script  static-function.script  static-local-var.script  string.script  template-function-1.script  template-function-3.script  template-function-4.script  template-function-5.script  template-partial-1.script  template-partial-2.script  two-pass-compil.script  type-alias.script  typedef.script  units.script  using-declaration.script  using-directive.script  while.script
tests/unit/: CMakeLists.txt  CMakeLists.txt.in  test_builders.cpp  test_classes.cpp  test_compiler.cpp  test_compiler_components.cpp  test_compiler_errors.cpp  test_conversions.cpp  test_coreutils.cpp  test_debug.cpp  test_eval.cpp  test_initializer_lists.cpp  test_lexer.cpp  test_modules.cpp  test_namelookup.cpp  test_namespaces.cpp  test_overloadresolution.cpp  test_parser.cpp  test_runtime.cpp  test_scenarios.cpp  test_templates.cpp  test_typesystem.cpp  tuk.m
vs/: debug.natvis
(+83 files in other folders)
